tests/failing/invalid_infix.dodo
fn main() {
    let x: u32 = 12 if 13;
}
